groups: fix group leader outcome alignment in Firefox
fixes CNVS-13366

test plan:
  * open a course's groups page
  * make a user a group leader
  * verify that the leader icon looks right across browsers

Reviewed-on: https://gerrit.instructure.com/35707
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Trevor deHaan <tdehaan@instructure.com>
Product-Review: Braden Anderson <banderson@instructure.com>

--- a/app/stylesheets/jst/groups/manage/groupUsers.scss
+++ b/app/stylesheets/jst/groups/manage/groupUsers.scss
@@ -81,13 +81,14 @@
   }
 
   .group-leader {
-    float: right;
-    line-height: 28px;
+    position: absolute;
+    right: 36px;
+    top: 7px;
   }
 }
 
 .group-user-name {
-  max-width: 90%;
+  max-width: 80%;
   overflow: hidden;
   white-space: nowrap;
   margin-right: 10px;
